property details bug fixes
